--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react-toastify": "^8.2.0",
     "react-webcam": "^7.0.1",
     "sass": "^1.50.0"
+  },
+  "devDependencies": {
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5"
   }
 }
